Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110286

SignalTransition::triggered can cause Segfault

XMLWordPrintable

    • Linux/X11, Windows
    • af4c8da54 (dev), b83e8a25b (6.4), ef10d5359 (6.5), 380105538 (tqtc/lts-6.2), 6dc7fa90e (tqtc/lts-5.15)

      When setting up SignalTransition { onTriggered: /.../ }{}, it can happen that this causes a segfault when creating the component. See the attached minimal example and the two stack traces.

        1. tst_main.qml
          0.3 kB
        2. CMakeLists.txt
          0.5 kB
        3. main.cpp
          0.1 kB
        4. qt5.log
          6 kB
        5. qt6.log
          8 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            omandel Olaf Mandel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: