StateMachine: Don't crash if no signal is passed to SignalTransition

Rather, just reset the transition.

Pick-to: 5.15 6.2 6.4 6.5
Fixes: QTBUG-110286
Change-Id: Ic25a6c7b841a47b180e1a62c7bdbd2e388cdc293
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>